tests/transpiler/x/scala/list_set_ops.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:42:02 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main(args: Array[String]): Unit = {
    println(ArrayBuffer(1, 2) ++ ArrayBuffer(2, 3).distinct)
    println(ArrayBuffer(1, 2, 3).filter(((x: Any) => !ArrayBuffer(2).contains(x))))
    println(ArrayBuffer(1, 2, 3).filter(((x: Any) => ArrayBuffer(2, 4).contains(x))))
    println(ArrayBuffer(1, 2) ++ ArrayBuffer(2, 3).size)
  }
}
